# ams

./: README.md  pyproject.toml
atva/: README.md  __init__.py  atva1_collusion.py  atva2_counter_strategic.py  atva3_imperfect_knowledge.py  atva4_multiple_tactical.py  cli.py  experiments.py  plot_results.py  plot_tradeoffs.py
btva/: __init__.py  analysis.py  cli.py  enumeration.py  enumeration_bullet.py  experiments.py  happiness.py  models.py  parsing.py  plot_results.py  strategic_options.py  strategies.py  voting.py
btva.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
experiments/: atva_results_2026-02-28.csv  atva_results_2026-03-03.csv  atva_results_2026-05-03.csv  results_2026-02-24.csv  results_2026-02-28.csv
tests/: test_cli_abif_smoke.py  test_enumeration_permutations.py  test_experiments_smoke.py  test_happiness.py  test_happiness_rank_normalized.py  test_parsing_abif.py  test_strategic_option_dataclass.py  test_strategies.py  test_strategy_filtering.py  test_voting.py
voting_scenarios/: edge_case_tie_all.abif  edge_case_truncation_and_ties.abif  sv_poll_1.abif  sv_poll_100.abif  sv_poll_101.abif  sv_poll_103.abif  sv_poll_105.abif  sv_poll_11.abif  sv_poll_110.abif  sv_poll_112.abif  sv_poll_117.abif  sv_poll_118.abif  sv_poll_121.abif  sv_poll_122.abif  sv_poll_126.abif  sv_poll_13.abif  sv_poll_130.abif  sv_poll_131.abif  sv_poll_132.abif  sv_poll_133.abif  sv_poll_134.abif  sv_poll_135.abif  sv_poll_136.abif  sv_poll_139.abif  sv_poll_14.abif  sv_poll_141.abif  sv_poll_142.abif  sv_poll_144.abif  sv_poll_146.abif  sv_poll_147.abif  (+599 more)
